--- a/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
+++ b/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
@@ -5,6 +5,9 @@
     <mat-card-title>{{video.title}}</mat-card-title>
     <mat-card-subtitle>{{video.description}}</mat-card-subtitle>
     <mat-card-subtitle>{{video.userId}}</mat-card-subtitle>
+    <button mat-icon-button class="delete" (click)="deleteVideo()">
+      <mat-icon>delete</mat-icon>
+    </button>
   </mat-card-header>
   <mat-card-content>
   </mat-card-content>
