--- a/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
+++ b/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
@@ -17,6 +17,11 @@
       <mat-icon mat-list-icon>thumb_up</mat-icon>
       <p matLine>Linked Videos</p>
     </mat-list-item>
+
+    <mat-list-item role="listitem" routerLink="/my-videos">
+      <mat-icon mat-list-icon>play_circle_outline</mat-icon>
+      <p matLine>My Videos</p>
+    </mat-list-item>
   </mat-list>
 </mat-sidenav>
 
