--- a/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
+++ b/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
@@ -1,14 +1,16 @@
-<mat-card class="example-card" routerLink="/video-details/{{video.id}}">
-  <img mat-card-image [src]="video.thumbnailUrl" alt="Thumbnail" >
-  <mat-card-header>
+<mat-card class="example-card" >
+  <img mat-card-image [src]="video.thumbnailUrl" alt="Thumbnail" routerLink="/video-details/{{video.id}}">
+  <mat-card-header routerLink="/video-details/{{video.id}}">
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{video.title}}</mat-card-title>
     <mat-card-subtitle>{{video.description}}</mat-card-subtitle>
     <mat-card-subtitle>{{video.userId}}</mat-card-subtitle>
-    <button mat-icon-button class="delete" (click)="deleteVideo()">
-      <mat-icon>delete</mat-icon>
-    </button>
   </mat-card-header>
   <mat-card-content>
   </mat-card-content>
+  <mat-card-actions>
+    <button mat-icon-button class="delete" (click)="deleteVideo()" >
+      <mat-icon>delete</mat-icon>
+    </button>
+  </mat-card-actions>
 </mat-card>
