--- a/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
+++ b/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
@@ -9,7 +9,7 @@
   <mat-card-content>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-icon-button class="delete" (click)="deleteVideo()" >
+    <button mat-icon-button class="delete" (click)="deleteConfirm()" >
       <mat-icon>delete</mat-icon>
     </button>
   </mat-card-actions>
