--- a/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
+++ b/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,12 @@
 
     <mat-list-item role="listitem" routerLink="/liked-videos">
       <mat-icon mat-list-icon>thumb_up</mat-icon>
-      <p matLine>Linked Videos</p>
+      <p matLine>Liked Videos</p>
+    </mat-list-item>
+
+    <mat-list-item role="listitem" routerLink="/disliked-videos">
+      <mat-icon mat-list-icon>thumb_up</mat-icon>
+      <p matLine>disLinked Videos</p>
     </mat-list-item>
   </mat-list>
 </mat-sidenav>
