--- a/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
+++ b/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
@@ -4,10 +4,6 @@
       <mat-icon mat-list-icon>home</mat-icon>
       <p matLine>Home</p>
     </mat-list-item>
-    <mat-list-item role="listitem" routerLink="/subscriptions">
-      <mat-icon mat-list-icon>subscriptions</mat-icon>
-      <p matLine>Subscriptions</p>
-    </mat-list-item>
     <mat-list-item role="listitem" routerLink="/history">
       <mat-icon mat-list-icon>history</mat-icon>
       <p matLine>History</p>
@@ -15,7 +11,12 @@
 
     <mat-list-item role="listitem" routerLink="/liked-videos">
       <mat-icon mat-list-icon>thumb_up</mat-icon>
-      <p matLine>Linked Videos</p>
+      <p matLine>Liked Videos</p>
+    </mat-list-item>
+
+    <mat-list-item role="listitem" routerLink="/disliked-videos">
+      <mat-icon mat-list-icon>thumb_up</mat-icon>
+      <p matLine>disLiked Videos</p>
     </mat-list-item>
   </mat-list>
 </mat-sidenav>
