edit video & tags

--- a/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
+++ b/frontend/youtube-clone-ui/src/app/my-video-card/my-video-card.component.html
@@ -12,5 +12,8 @@
     <button mat-icon-button class="delete" (click)="deleteConfirm()" >
       <mat-icon>delete</mat-icon>
     </button>
+    <button mat-icon-button class="delete" (click)="setting()" >
+      <mat-icon>settings</mat-icon>
+    </button>
   </mat-card-actions>
 </mat-card>
