--- a/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
@@ -39,8 +39,11 @@
       <div>{{videoDescription}}</div>
       <mat-divider></mat-divider>
       <mat-chip-list>
-        <mat-chip>Spring Boot</mat-chip>
-        <mat-chip>Angular</mat-chip>
+        <mat-chip *ngFor="let tag of tags">
+        {{
+        tag
+        }}
+        </mat-chip>
       </mat-chip-list>
       <mat-divider></mat-divider>
       <app-comments [videoId] = "videoId" *ngIf="videoAvailable"></app-comments>
