--- a/frontend/youtube-clone-ui/src/app/header/header.component.html
+++ b/frontend/youtube-clone-ui/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span routerLink="featured">Youtube Clone</span>
+    <span routerLink="callback">Youtube Clone</span>
     <span class="example-spacer"></span>
     <button mat-icon-button class="example-icon favorite-icon" routerLink="/upload-video" aria-label="Example icon-button with heart icon">
       <mat-icon>video_call</mat-icon>
